@@ -33,10 +33,8 @@ public class CBRController {
 	private String conceptName = "mühle";
 	private Concept concept = null;
 	private ICaseBase casebase = null;
-	private CBR_AdaptionProcess adaption = new CBR_AdaptionProcess();
-	private CBR_Learning_Process_Prototyp learning = new CBR_Learning_Process_Prototyp();
 	private AgentenOperations operations = new AgentenOperations();
-	private Instance learnProblem = null;
+	private List<Integer> resultSet = new ArrayList<>();
 	
 	// Für die Fehlerbehandlung wird ein Logger eingesetzt. @log4j
 	private static final Logger logger = Logger.getLogger(CBRController.class);
@@ -77,6 +75,7 @@ public class CBRController {
 	 */
 	public List<Integer> executeQuery(Board board, Spieler spieler) {
 		// Werte die Daten aus:
+		this.resultSet.clear();
 		int spielphase = spieler.getSpielPhase();
 		int anzahlDerEigenenSpielsteine = spieler.getAnzahlSteine();
 		int mühlen = spieler.getAnzahlMühlen();
@@ -84,7 +83,6 @@ public class CBRController {
 		int	spielsteineR2 = 0;
 		int spielsteineR3 = 0;
 		List<Stein> dataToCheck = spieler.getPosiSteine();
-		List<Integer> resultSet = new ArrayList<>();
 		
 		for(Stein stein:dataToCheck) {
 			if(stein.getRing() == 0) {
@@ -100,7 +98,6 @@ public class CBRController {
 		try {
 			Retrieval retrieval = new Retrieval(concept, casebase);
 			Instance query = retrieval.getQueryInstance();
-			this.learnProblem = query;
 			query.addAttribute("Spielphase", spielphase);
 			query.addAttribute("Anzahl_d_eigenen_Spielsteine", anzahlDerEigenenSpielsteine);
 			query.addAttribute("Spielsteine_Ring_1", spielsteineR1);
@@ -110,96 +107,24 @@ public class CBRController {
 			retrieval.start();
 			logger.info("CBR Query execute with: " + spielphase + ", "+ anzahlDerEigenenSpielsteine + ", "
 					+ spielsteineR1 + ", "+ spielsteineR2 + ", " + spielsteineR3 + ","+ mühlen);
-			//resultSet = this.analyseResultQuery(retrieval.getResult(), board, spieler);
 			List<Pair<Instance, Similarity>> result = retrieval.getResult();
+			IntegerDesc lösungADesc = (IntegerDesc) concept.getAllAttributeDescs().get("Lösungfeld_Start");
+			IntegerDesc lösungBDesc = (IntegerDesc) concept.getAllAttributeDescs().get("Lösungsfeld_Ziel");
+			List<Instance> dataResult = new ArrayList<>();
+			List<Integer> dataQuery = new ArrayList<>();
+			for(int i = 0; i <= 5; i++) {
+				dataResult.add(result.get(i).getFirst());
+				dataQuery.add(Integer.parseInt(result.get(i).getFirst().getAttForDesc(lösungBDesc).getValueAsString()));
+			}
 			
-			
-		//	System.out.println("Ergebnis" + result.get(0).getFirst().getName());
-		//	System.out.println("Ergebnis" + result.get(1).getFirst().getName());
-			
+			resultSet.add(Integer.parseInt(dataResult.get(0).getAttForDesc(lösungBDesc).getValueAsString()));
 		} catch (ParseException e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
-		List<Integer> test = new ArrayList<>();
-		test.add(3);
-		return test;
-	}
-	/**
-	 * Diese Methode bereitet das ResultSet für die spätere Verarbeitung vor.
-	 * @param result 
-	 * @return die beiden extrahierenden Felder als Rückgabeparameter.
-	 */
-	private List<Integer> analyseResultQuery(List<Pair<Instance, Similarity>> result, Board board, Spieler spieler) {
-		logger.info("Check the results:" + result.get(0).getFirst().getName() + "Ähnlichkeit:  "
-				+ result.get(0).getSecond().getValue() );
-		List<Integer> dataResult = new ArrayList<>();
-		boolean lösungAccept = false;
-		IntegerDesc lösungADesc = (IntegerDesc) concept.getAllAttributeDescs().get("Lösungfeld_Start");
-		IntegerDesc lösungBDesc = (IntegerDesc) concept.getAllAttributeDescs().get("Lösungsfeld_Ziel");
-		Instance adaptEins = concept.getInstance(result.get(0).getFirst().getName());
-		Instance selectForResult = null;
 		
-		// Durchlaufe die ersten 5 Fälle aus der Rückgabe.
-		while(!lösungAccept) {
-			// Durchlaufe alle 5 Fälle
-			for(int i = 0; i < 5; i++) {
-				Instance evaluateResult = concept.getInstance(result.get(i).getFirst().getName());
-				if(evaluateResult != null) {
-					int lösungfeldA = Integer.parseInt(evaluateResult.getAttForDesc(lösungADesc).getValueAsString());
-					int lösungfeldB = Integer.parseInt(evaluateResult.getAttForDesc(lösungBDesc).getValueAsString());
-					
-					if(this.evaluateSolution(spieler, board, lösungfeldA, lösungfeldB)) {
-						lösungAccept = true;
-						dataResult.add(lösungfeldA);
-						dataResult.add(lösungfeldB);
-						selectForResult = evaluateResult;
-						break;
-					} else if(i== 4) {
-						lösungAccept = true;
-					}
-				}
-			}
-			
-			if(lösungAccept) {
-				break;
-			}
-		}
-		if(!dataResult.isEmpty()) {
-			// Versuche die Lösung zu adaptieren
-			if(Integer.parseInt(adaptEins.getAttForDesc(lösungADesc).getValueAsString()) != dataResult.get(0)) {
-				casebase.addCase(adaption.provideNewCase(adaptEins, selectForResult, lösungADesc, lösungBDesc));
-			}
-		} else if(dataResult.isEmpty()) {
-			System.out.println("Achtung: CBR System hat ein Problem erzeugt");
-			logger.error("CBR-System: Es muss gelernt werden.");
-			Instance gelernt = learning.letsTryToLearnANewCase(this.learnProblem, spieler, board, lösungADesc, lösungBDesc);
-			if(gelernt != null) {
-				System.out.println("CBR System: Ein neuer Fall wurde gelernt");
-				logger.info("CBR-System: Ein neuer Fall wurde angelernt.");
-				casebase.addCase(gelernt);
-				dataResult.add(learning.learningParameterA);
-				dataResult.add(learning.learningParameterB);
-			}
-			
-		}
-
-		// Check ob die Liste immer noch leer ist.
-		
-		return dataResult;
-	}
-	/**
-	 * Prüfe die Lösung für den Einsatz.
-	 * @param spieler Eingabeparameter
-	 * @param board Eingabeparameter
-	 * @param startF Startfeld der neuen Lsg.
-	 * @param zielF  Endfeld der neuen Lsg.
-	 * @return ja / nein
-	 */
-	private boolean evaluateSolution(Spieler spieler, Board board, int startF, int zielF) {
-		Stein start = operations.getSteineFuerCBRSystem(startF);
-		Stein ziel = operations.getSteineFuerCBRSystem(zielF);
-		return adaption.evaluateSolution(spieler, board, start, ziel);
+		return resultSet;
 	}
 	
-}
+	
+}	
